--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,8 @@
 @tailwind utilities; */
 @import "tailwindcss";
 
+/* @reference "tailwindcss"; */
+
 /* inter-latin-wght-normal */
 @font-face {
   font-family: "Inter Variable";
